--- a/package.json
+++ b/package.json
@@ -1,29 +1,35 @@
 {
-  "name": "invoice-dashboard",
-  "private": true,
-  "version": "0.0.0",
-  "type": "module",
-  "scripts": {
-    "dev": "vite",
-    "build": "tsc && vite build",
-    "preview": "vite preview"
-  },
-  "dependencies": {
-    "axios": "^1.1.3",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-icons": "^4.6.0",
-    "react-router-dom": "^6.4.3",
-    "uuid": "^9.0.0"
-  },
-  "devDependencies": {
-    "@types/node": "^18.11.9",
-    "@types/react": "^18.0.24",
-    "@types/react-dom": "^18.0.8",
-    "@types/react-router-dom": "^5.3.3",
-    "@types/uuid": "^8.3.4",
-    "@vitejs/plugin-react": "^2.2.0",
-    "typescript": "^4.6.4",
-    "vite": "^3.2.3"
-  }
+    "name": "invoice-dashboard",
+    "private": true,
+    "version": "0.0.0",
+    "type": "module",
+    "scripts": {
+        "dev": "vite",
+        "build": "tsc && vite build",
+        "preview": "vite preview",
+        "format": "npx prettier --write src",
+        "lint": "npx eslint src --ext .ts,.tsx,.js,.jsx"
+    },
+    "dependencies": {
+        "axios": "^1.1.3",
+        "react": "^18.2.0",
+        "react-dom": "^18.2.0",
+        "react-icons": "^4.6.0",
+        "react-router-dom": "^6.4.3",
+        "uuid": "^9.0.0",
+        "x-is-type": "^1.2.0"
+    },
+    "devDependencies": {
+        "@types/node": "^18.11.9",
+        "@types/react": "^18.0.24",
+        "@types/react-dom": "^18.0.8",
+        "@types/react-router-dom": "^5.3.3",
+        "@types/uuid": "^8.3.4",
+        "@typescript-eslint/eslint-plugin": "^5.43.0",
+        "@vitejs/plugin-react": "^2.2.0",
+        "eslint": "^8.27.0",
+        "eslint-plugin-react": "^7.31.10",
+        "typescript": "^4.6.4",
+        "vite": "^3.2.3"
+    }
 }
