--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
         "lint": "npx eslint src --ext .ts,.tsx,.js,.jsx"
     },
     "dependencies": {
+        "@emotion/react": "^11.10.5",
+        "@mantine/core": "^5.8.0",
+        "@mantine/hooks": "^5.8.0",
         "axios": "^1.1.3",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
