--- a/package.json
+++ b/package.json
@@ -11,12 +11,10 @@
         "lint": "npx eslint src --ext .ts,.tsx,.js,.jsx"
     },
     "dependencies": {
-        "@emotion/react": "^11.10.5",
-        "@mantine/core": "^5.8.0",
-        "@mantine/hooks": "^5.8.0",
         "axios": "^1.1.3",
         "dayjs": "^1.11.6",
         "react": "^18.2.0",
+        "react-beautiful-dnd": "^13.1.1",
         "react-dom": "^18.2.0",
         "react-icons": "^4.6.0",
         "react-router-dom": "^6.4.3",
@@ -31,6 +29,10 @@
         "@types/uuid": "^8.3.4",
         "@typescript-eslint/eslint-plugin": "^5.43.0",
         "@vitejs/plugin-react": "^2.2.0",
+        "@emotion/react": "^11.10.5",
+        "@mantine/core": "^5.8.0",
+        "@mantine/hooks": "^5.8.0",
+        "@types/react-beautiful-dnd": "^13.1.2",
         "eslint": "^8.27.0",
         "eslint-plugin-react": "^7.31.10",
         "typescript": "^4.6.4",
